# AIRPORT-Distributed-System

./: .gitignore  CMakeLists.txt  Dockerfile  GroundControl.cpp  README.md  docker-compose.yml
AIRPORT-Distributed-System-dev_remote_repo/: CMakeLists.txt  docker-compose.yml
AIRPORT-Distributed-System-dev_remote_repo/data/: airport_map.json
AIRPORT-Distributed-System-dev_remote_repo/db/init/: 001_followme.sql  002_information_panel.sql
AIRPORT-Distributed-System-dev_remote_repo/scripts/: init_flights.sh  reset_db.sh  run_multiconsole_tests.sh  smoke_passenger_flow.sh  watch_airport_console.sh
AIRPORT-Distributed-System-dev_remote_repo/services/: BoardClient.cpp  Board_bkp.cpp  FollowMe.cpp  GroundControl.cpp  HandlingSuperviser.cpp  InformationPanel.cpp
AIRPORT-Distributed-System-dev_remote_repo/services/passenger_modules/: CheckIn.cpp  Passengers.cpp  TicketSales.cpp
AIRPORT-Distributed-System-dev_remote_repo/shared/: common.h
Airport-GUI/: .dockerignore  .gitignore  README.md  docker-compose.yml
Airport-GUI/data/: airport_map.json
Airport-GUI/services/airport_visualizer/: Dockerfile  main.py  requirements.txt
CateringTruck/: .gitignore  Dockerfile  README.md  docker-compose.yml  document.yaml  requirements.txt
CateringTruck/app/: config.py  dependencies.py  main.py
CateringTruck/app/clients/: board.py  ground_control.py  handling_supervisor.py
CateringTruck/app/models/: catering_truck.py
CateringTruck/app/routers/: catering_trucks.py
CateringTruck/app/schemas/: catering_truck.py
CateringTruck/app/services/: catering_truck_service.py  mission_worker.py
CateringTruck/app/storage/: repository.py
CateringTruck/app/utils/: map_router.py
CateringTruck/tests/: conftest.py  mocks.py  test_catering_trucks.py
data/: airport_map.json
db/: 003_reporting.sql
db/init/: 001_followme.sql  002_information_panel.sql  003_catering_truck.sql  003_refueler_vehicles.sql
reporting-service/: README.md  docker-compose.yml  main.py
scripts/: ask_land_permission.sh  create_plane_in_air.sh  flight_session_is_landed.sh  get_events.sh  get_planes.sh  get_snapshot.sh  init_buses.sh  init_catering_trucks.sh  init_followme_vehicles.sh  reset_db.sh
services/: Board.cpp  FollowMe.cpp  GroundControl.cpp  HandlingSuperviser.cpp  InformationPanel.cpp  Refueler.cpp
services/airport_visualizer/: Dockerfile  main.py
services/catering_truck/: Dockerfile  catering_truck.py
services/handling_supervisor/: Dockerfile  main.py  requirements.txt
services/passenger_bus/: Dockerfile  main.py
services/refueler/: Dockerfile  main.py  requirements.txt
shared/: common.h
